# AlphaCouncil

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
alphacouncil/: __init__.py
alphacouncil/advisor/: __init__.py  engine.py  models.py  predictor.py  report.py  screener.py  universes.py
alphacouncil/agents/: __init__.py  base.py  growth_momentum.py  mean_reversion.py  meta.py  multifactor.py  news_shock.py  portfolio_optimizer.py  sentiment.py  volatility.py
alphacouncil/analysis/: __init__.py  fundamental.py  macro.py  sentiment.py  technical.py
alphacouncil/core/: __init__.py  agent_portfolio.py  cache_manager.py  config.py  database.py  message_bus.py  models.py  profiler.py  risk_manager.py
alphacouncil/core/broker/: __init__.py  angelone.py  base.py  fyers.py  paper.py
alphacouncil/core/safety/: __init__.py  audit.py  kill_switch.py  limits.py  validation_gate.py
alphacouncil/dashboard/: __init__.py  advisor_app.py  app.py
alphacouncil/research/: __init__.py  attribution.py  backtester.py  discovery.py  news_alpha.py  optimizer.py  regime_learner.py
notebooks/: backtest_analysis.ipynb
tests/: __init__.py  test_agents.py  test_analysis.py  test_backtester.py  test_broker.py  test_latency.py  test_research.py  test_safety.py
